# mmm

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md  makefile  run_single_test.sh  run_tests.sh
doc/: README.md  Vector.md
src/: const.hpp  mmm.hpp  types.hpp
src/mat/: tmat.hpp  tmat.tpp  tmat2.hpp  tmat2.tpp
src/mat/func/: affine.hpp  affine.tpp  enl.hpp  enl.tpp  io.hpp  io.tpp  mat.hpp  mat.tpp  red.hpp  reduct.hpp  reduct.tpp
src/mat/opr/: asig.hpp  asig.tpp  comp.hpp  comp.tpp  io.hpp  io.tpp  num.hpp  num.tpp
src/swizzle/: swizzle.hpp  swizzle.tpp  swizzle1.hpp  swizzle1.tpp  swizzle_declarations.tpp
src/swizzle/opr/: asig.tpp
src/typefu/: components.hpp  gen.hpp  promote.hpp  range.hpp  restrict.hpp  traits.hpp
src/vec/: tvec.hpp  tvec.tpp  tvec2.hpp  tvec2.tpp  tvec3.hpp  tvec3.tpp  vecType.hpp  vecType.tpp
src/vec/func/: common.hpp  common.tpp  exp.hpp  exp.tpp  geo.hpp  geo.tpp  io.hpp  io.tpp  red.hpp  red.tpp  reduct.hpp  reduct.tpp  rel.hpp  rel.tpp  trig.hpp  trig.tpp
src/vec/opr/: asig.hpp  asig.tpp  comp.hpp  comp.tpp  enum.hpp  enum.tpp  io.hpp  io.tpp  num.hpp  num.tpp
test/: CMakeLists.txt  Catch.cmake  main.cpp  unittest.cpp  unittest.hpp
test/mat/: mat.cpp
test/mat/func/: affine.cpp  enl.cpp  mat.cpp  red.cpp  reduct.cpp
test/mat/opr/: asig.cpp  comp.cpp  io.cpp  num.cpp
test/swizzle/: swizzle.cpp
test/swizzle/opr/: asig.cpp  enum.cpp
test/vec/: vec.cpp  vec_test.cpp
test/vec/func/: common.cpp  exp.cpp  geo.cpp  red.cpp  reduct.cpp  rel.cpp  trig.cpp
test/vec/opr/: asig.cpp  comp.cpp  enum.cpp  io.cpp  num.cpp
